@@ -1,11 +1,10 @@
 package de.adorsys.aspsp.xs2a.connector.spi.converter;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import de.adorsys.aspsp.xs2a.connector.mock.MockAccountData;
 import de.adorsys.ledgers.middleware.api.domain.account.*;
 import de.adorsys.ledgers.middleware.api.domain.payment.AmountTO;
 import de.adorsys.ledgers.middleware.api.domain.payment.RemittanceInformationStructuredTO;
+import de.adorsys.psd2.xs2a.core.pis.Remittance;
 import de.adorsys.psd2.xs2a.spi.domain.account.*;
 import de.adorsys.psd2.xs2a.spi.domain.common.SpiAmount;
 import de.adorsys.psd2.xs2a.spi.domain.fund.SpiFundsConfirmationRequest;
@@ -91,7 +90,7 @@ public abstract class LedgersSpiAccountMapper {
                                t.getUltimateDebtor(),
                                t.getRemittanceInformationUnstructured(),
                                MockAccountData.REMITTANCE_UNSTRUCTURED_ARRAY,
-                               mapRemittanceInformationToString(t.getRemittanceInformationStructured()),
+                               mapToRemittance(t.getRemittanceInformationStructured()),
                                MockAccountData.REMITTANCE_STRUCTURED_ARRAY,
                                t.getPurposeCode(),
                                t.getBankTransactionCode(),
@@ -174,16 +173,5 @@ public abstract class LedgersSpiAccountMapper {
 
     public abstract AccountReferenceTO mapToAccountReferenceTO(SpiAccountReference spiAccountReference);
 
-    private String mapRemittanceInformationToString(RemittanceInformationStructuredTO remittanceInformationStructuredTO) {
-        if (remittanceInformationStructuredTO == null) {
-            return null;
-        }
-
-        try {
-            ObjectMapper objectMapper = new ObjectMapper();
-            return objectMapper.writeValueAsString(remittanceInformationStructuredTO);
-        } catch (JsonProcessingException e) {
-            return null;
-        }
-    }
+    public abstract Remittance mapToRemittance(RemittanceInformationStructuredTO remittanceInformationStructuredTO);
 }
